# dottie-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/dottie_cli/: __init__.py  api.py  auth.py  cli.py  domain.py  formatting.py
tests/: test_api.py  test_auth.py  test_cli.py  test_domain.py  test_help.py
