[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dottie-cli"
version = "0.3.0"
description = "Token-based CLI for team, conversations, equipment, and absence in Dottie HR"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
dottie = "dottie_cli.cli:main"
dottie-cli = "dottie_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
